# pdf2md

./: .gitignore  AGENTS.md  CLA.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  README_latex_docling_groundtruth.md  agent.md  backend_catalog.yaml  compare_pre_docling_groundtruth.py  create_latex_examples.sh  current_plan.md  current_status.md  description.md  doc2md.py  generate_latex_docling_groundtruth.py  history.md  latex_to_pre_docling_groundtruth.py  next_plan.md  pdf2md.backends.example.toml  pdf2md.consensus.example.toml  project.md  pyproject.toml  requirements.txt  run_latex_docling_backends.sh  run_log.md  test_visual.md  validate_latex_docling_groundtruth.py
.agent/: PLANS.md
.current/: latex_paddle_only.toml
.github/: pull_request_template.md
.venv-mineru/: pyvenv.cfg
doc2md/: __init__.py  cli.py  models.py  router.py
docs/: AGENTS.md  architecture.md  backends.md  docling_layer.md  project-consistency-audit.md  repo-audit.md
envs/: paddleocr_vl.yml
install_scripts/: check_backend_installs.sh
old_code/: backend_catalog.yaml
plan_proposal/: AGENTS.md
plans/: 001-deterministic-extraction.md  002-docir-offline-foundations.md  003-backend-feasibility-and-parallel-launch.md  003_1-mineru-backend.md  003_2-paddleocr-vl-backend.md  003_3-experimental-universal-backends.md  003_rules-backend-dependency-installation-audit.md  004-backend-install-sandbox.md  005-backend-install-verification-and-docs.md
schema_examples/: top.block.json  top.deepseek.json  top.formula.json  top.line.json  top.media.json  top.page.json  top.schema.json  (+2 more)
(+734 files in other folders)
