[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf2md"
version = "0.1.0"
description = "PDF to Markdown converter skeleton"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2",
  "typer>=0.12",
]

[project.scripts]
pdf2md = "pdf2md.cli.main:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
